tests/NormalTests/paczka1/fuzzy1/95370292.err
Error in line 5: JBDFB S29 92,7
Error in line 23: A120 A120 10,4
Error in line 24: JBDFB S50 33,8
Error in line 31: JBDFB A120 64,9
